[package]
name = "double-shift"
version = "0.1.0"
authors = ["Vandewaeter Fabio <vandewaeter.fabio@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
game_core = { path = "./game_core" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[workspace]
members = ["game_core", "."]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
